# django-timescaledb

./: Makefile  README.md  docker-compose.yml  pyproject.toml  setup.cfg
.github/workflows/: ci-tests.yml
docs/superpowers/plans/: 2026-03-30-testing-environment.md
docs/superpowers/specs/: 2026-03-30-edge-cases-design.md  2026-03-30-testing-environment-design.md
timescale/db/backends/postgis/: schema.py
timescale/db/backends/postgresql/: schema.py
timescale/db/models/: expressions.py  managers.py  querysets.py
timescale/tests/: __init__.py  apps.py  conftest.py  factories.py  models.py  settings.py  test_models.py  test_schema.py
