[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "django-timescaledb"
version = "0.3.0"
dynamic = ["description", "readme", "classifiers", "license", "authors", "urls"]
requires-python = ">=3.9"

[project.optional-dependencies]
test = [
    "pytest>=7.4",
    "pytest-django>=4.7",
    "factory-boy>=3.3",
    "psycopg2-binary>=2.9",
    "Django>=4.2",
    "python-dateutil>=2.8",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "timescale.tests.settings"
addopts = "--no-migrations -v"
testpaths = ["timescale/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["timescale"]
omit = ["timescale/db/backends/postgis/*"]

[tool.coverage.report]
omit = ["timescale/db/backends/postgis/*"]
