[metadata]
name = django-timescaledb
version = 0.2.13
description = A Django database backend for integration with TimescaleDB
long_description = file: README.rst
url = https://github.com/schlunsen/django-timescaledb
author = Rasmus Schlünsen
author_email = raller84@gmail.com
license = Apache-2.0 License  
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 4.2
    Framework :: Django :: 5.2
    Framework :: Django :: 6.0
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:

[options.packages.find]
exclude =
    timescale.tests
    timescale.tests.*
